# genome_inference

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Snakefile  command_dict.py  config.yaml  gather_stats.all.sh  gather_stats.sh
benchmarking/: benchmarking.Snakefile  config.yaml
envs/: environment.yaml
scripts/: dist_windows.py  get_rescued_reads.py  random_diplotype.py  split_sam_by_ref.py  summarize.py
scripts/scripts/: split_sam_by_ref.py
